--- a/templates/lista_produtos.html
+++ b/templates/lista_produtos.html
@@ -1,10 +1,13 @@
 {% extends 'base.html' %}
 {% block conteudo %}
-  <h2>Produtos Cadastrados</h2>
-  <ul>
-    {% for p in produtos %}
-      <li>{{ p.nome }} — R$ {{ '%.2f'|format(p.preco) }}</li>
-    {% endfor %}
-  </ul>
-  <a href="{{ url_for('add_produto') }}">Adicionar produto</a>
+<h2>Produtos Cadastrados</h2>
+<ul>
+  {% for p in produtos %}
+  <li>
+    {{ p.nome }} — R$ {{ '%.2f'|format(p.preco) }}
+    | <a href="{{ url_for('editar_produto', id=p.id) }}">Editar</a>
+  </li>
+  {% endfor %}
+</ul>
+<a href="{{ url_for('add_produto') }}">Adicionar produto</a>
 {% endblock %}
