--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,27 @@
 {% block conteudo %}
 <h2>Menu Principal</h2>
 
-<h3>Gerenciar Produtos</h3>
+{% if current_user.is_authenticated %}
+<h3>Área do Cliente</h3>
+<ul>
+    <li>
+        <a href="{{ url_for('listar_produtos_cliente') }}">Ver Produtos e Comprar</a>
+    </li>
+    <li>
+        <a href="{{ url_for('minhas_compras') }}">Ver Meu Histórico de Compras</a>
+    </li>
+</ul>
+{% else %}
+<h3>Acesso à Loja</h3>
+<ul>
+    <li>
+        <a href="{{ url_for('login') }}">Fazer Login (Acesso do Cliente)</a>
+    </li>
+</ul>
+{% endif %}
+
+
+<h3>Gerenciar Produtos (Admin)</h3>
 <ul>
     <li>
         <a href="{{ url_for('listar_produtos') }}">Ver Produtos Cadastrados</a>
@@ -12,7 +32,7 @@
     </li>
 </ul>
 
-<h3>Gerenciar Clientes</h3>
+<h3>Gerenciar Clientes (Admin)</h3>
 <ul>
     <li>
         <a href="{{ url_for('listar_clientes') }}">Ver Clientes Cadastrados</a>
